Add inspections.